# hlk-events

./: CHANGELOG.md  CMakeLists.txt  README.md  TODO.md
example/: eventhandler.cpp  eventhandler.h  eventholder.cpp  eventholder.h  main.cpp
include/hlk/events/: abstractdelegate.h  abstractevent.h  abstractwrapper.h  delegate.h  event.h  eventdispatcher.cpp  eventdispatcher.h  eventloop.cpp  eventloop.h  functionwrapper.h  lambdawrapper.h  methodwrapper.h  notifiableobject.h  object.cpp  object.h  task.h
src/: abstractwrapper.h  delegate.h  event.h  functionwrapper.h  lambdawrapper.h  methodwrapper.h  notifierobject.h
test/: CMakeLists.txt  eventhandler.h  eventholder.h  main.cpp
tests/: CMakeLists.txt  functiondelegatecall.cpp  lambdadelegatecall.cpp  methoddelegatecall.cpp  removedlambdacall.cpp  removedmethodcall.cpp  removedmethodcallv2.cpp
